<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="kr.tangram.smartgym.ui.login.LoginViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_both_2"
        android:fitsSystemWindows="true">

    <include layout="@layout/layout_header"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="kr.tangram.smartgym.ui.login.LoginActivity">


            <TextView
                android:id="@+id/tvLoginScript"
                style="@style/ScriptTextStyle"
                android:text="@string/login_script"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvEmailID"
                style="@style/Header2TextStyle"
                android:layout_marginTop="28dp"
                android:text="@string/login_email_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLoginScript" />

            <EditText
                android:id="@+id/edtEmail"
                style="@style/EditTextStyle"
                android:layout_marginTop="@dimen/margin_top_7dp"
                android:hint="@string/login_hint_email_login"
                android:inputType=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEmailID"
                tools:ignore="TouchTargetSizeCheck" />


            <Button
                android:id="@+id/btnEmailLink"
                style="@style/ButtonStyle"
                android:drawableLeft="@drawable/ic_login_email"
                android:text="@string/login_email_certification"
                android:layout_marginTop="84dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLoginFailScript" />

            <TextView
                android:id="@+id/tvLoginFailScript"
                style="@style/MessageTextStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

            <Button
                android:id="@+id/btnJoin"
                style="@style/ButtonStyle"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="@dimen/margin_side_40dp"
                android:drawableLeft="@drawable/ic_login_join"
                android:text="@string/login_join"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnEmailLink" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>