<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="kr.tangram.smartgym.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="kr.tangram.smartgym.ui.login.LoginActivity">


        <TextView
            android:id="@+id/tvEmailLogin"
            android:layout_width="@dimen/layout_with"
            android:layout_height="28dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="@dimen/login_header_margin_top"
            android:layout_marginEnd="40dp"
            android:text="@string/login_email_login"
            android:textSize="@dimen/login_header_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLoginScript"
            android:layout_width="@dimen/layout_with"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="@dimen/login_script_margin_top"
            android:layout_marginEnd="40dp"
            android:text="@string/login_script"
            android:textSize="@dimen/login_script_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailLogin" />

        <TextView
            android:id="@+id/tvEmailID"
            android:layout_width="@dimen/layout_with"
            android:layout_height="24dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/login_email_id"
            android:textSize="@dimen/login_header2_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginScript" />

        <EditText
            android:id="@+id/edtSignUpEmail"
            android:layout_width="@dimen/layout_with"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/login_hint_email_login"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailID"
            tools:ignore="TouchTargetSizeCheck" />


        <Button
            android:id="@+id/btnEmailSend"
            android:layout_width="@dimen/layout_with"
            android:layout_height="48dp"
            android:layout_marginTop="264dp"
            android:text="@string/login_email_certification"
            android:textSize="@dimen/login_button_text_size"
            android:textColor="@color/white"
            android:textAlignment="textStart"
            android:paddingStart="@dimen/button_padding_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtSignUpEmail" />

        <TextView
            android:id="@+id/tvSignUpFailScript"
            android:layout_width="@dimen/layout_with"
            android:layout_height="32dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:textColor="#FF0000"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtSignUpEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>